[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://LimitePlayer.png" type="Texture" id=2]
[ext_resource path="res://cena.gd" type="Script" id=3]
[ext_resource path="res://Limites.png" type="Texture" id=4]
[ext_resource path="res://Cabecas.gd" type="Script" id=5]
[ext_resource path="res://Neon.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://GlobalLight.png" type="Texture" id=7]
[ext_resource path="res://crt_material.tres" type="Material" id=8]
[ext_resource path="res://Pared.png" type="Texture" id=9]
[ext_resource path="res://TijoloN.png" type="Texture" id=12]
[ext_resource path="res://Tijolo.png" type="Texture" id=13]

[sub_resource type="TileSet" id=1]
0/name = "Limites.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tijolo.png 1"
1/texture = ExtResource( 13 )
1/normal_map = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 0.45098, 0.45098, 0.45098, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 704, 32 )

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 768, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1400, 32 )

[sub_resource type="CanvasItemMaterial" id=6]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 576 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32, 576 )

[sub_resource type="CanvasItemMaterial" id=9]

[sub_resource type="Environment" id=10]
background_mode = 4
dof_blur_near_distance = 8192.0
glow_enabled = true
glow_levels/2 = true
glow_intensity = 1.0
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="TileSet" id=11]
0/name = "Limites.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CanvasItemMaterial" id=12]

[sub_resource type="DynamicFont" id=13]
size = 90
use_filter = true
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
position = Vector2( 32, 32 )
script = ExtResource( 3 )

[node name="TileMapGame" type="TileMap" parent="."]
z_index = -2
tile_set = SubResource( 1 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 327652, 1, 0, 327653, 1, 0, 327654, 1, 0, 327655, 1, 0, 327656, 1, 0, 327657, 1, 0, 327658, 1, 0, 327659, 1, 0, 327660, 1, 0, 327661, 1, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 393188, 1, 0, 393189, 1, 0, 393190, 1, 0, 393191, 1, 0, 393192, 1, 0, 393193, 1, 0, 393194, 1, 0, 393195, 1, 0, 393196, 1, 0, 393197, 1, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 458724, 1, 0, 458725, 1, 0, 458726, 1, 0, 458727, 1, 0, 458728, 1, 0, 458729, 1, 0, 458730, 1, 0, 458731, 1, 0, 458732, 1, 0, 458733, 1, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 524260, 1, 0, 524261, 1, 0, 524262, 1, 0, 524263, 1, 0, 524264, 1, 0, 524265, 1, 0, 524266, 1, 0, 524267, 1, 0, 524268, 1, 0, 524269, 1, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 589796, 1, 0, 589797, 1, 0, 589798, 1, 0, 589799, 1, 0, 589800, 1, 0, 589801, 1, 0, 589802, 1, 0, 589803, 1, 0, 589804, 1, 0, 589805, 1, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 655332, 1, 0, 655333, 1, 0, 655334, 1, 0, 655335, 1, 0, 655336, 1, 0, 655337, 1, 0, 655338, 1, 0, 655339, 1, 0, 655340, 1, 0, 655341, 1, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 720868, 1, 0, 720869, 1, 0, 720870, 1, 0, 720871, 1, 0, 720872, 1, 0, 720873, 1, 0, 720874, 1, 0, 720875, 1, 0, 720876, 1, 0, 720877, 1, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 786404, 1, 0, 786405, 1, 0, 786406, 1, 0, 786407, 1, 0, 786408, 1, 0, 786409, 1, 0, 786410, 1, 0, 786411, 1, 0, 786412, 1, 0, 786413, 1, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 851940, 1, 0, 851941, 1, 0, 851942, 1, 0, 851943, 1, 0, 851944, 1, 0, 851945, 1, 0, 851946, 1, 0, 851947, 1, 0, 851948, 1, 0, 851949, 1, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 917476, 1, 0, 917477, 1, 0, 917478, 1, 0, 917479, 1, 0, 917480, 1, 0, 917481, 1, 0, 917482, 1, 0, 917483, 1, 0, 917484, 1, 0, 917485, 1, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 1114111, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1179647, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0 )

[node name="LimitePlayer" type="StaticBody2D" parent="."]
position = Vector2( 704, 800 )
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="LimitePlayer"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="LimitePlayer"]
material = SubResource( 3 )
position = Vector2( 0, 28 )
scale = Vector2( 1, 0.4 )
texture = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="LimitePlayer"]
position = Vector2( 3.05176e-05, 27.5 )
scale = Vector2( 0.648649, 0.00740132 )
texture = ExtResource( 7 )
energy = 0.8

[node name="Paredes" type="Node2D" parent="."]

[node name="Topo" type="StaticBody2D" parent="Paredes" groups=[
"Parede",
]]
position = Vector2( 704, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/Topo"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Paredes/Topo"]
position = Vector2( 0, 21 )
texture = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="Paredes/Topo"]
position = Vector2( -2.09808e-05, 21 )
scale = Vector2( 67.9537, 1.80921 )
texture = ExtResource( 7 )
texture_scale = 0.01
energy = 0.6

[node name="Baixo" type="StaticBody2D" parent="Paredes" groups=[
"Parede",
"Sobe",
]]
position = Vector2( 704, 1184 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/Baixo"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Paredes/Baixo"]
material = SubResource( 6 )
position = Vector2( 0, -21 )
texture = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="Paredes/Baixo"]
position = Vector2( -1.52588e-05, -20.9999 )
scale = Vector2( 0.679537, 0.0180921 )
texture = ExtResource( 7 )
energy = 0.6

[node name="Esquerda" type="StaticBody2D" parent="Paredes" groups=[
"Parede",
]]
position = Vector2( -32, 416 )
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/Esquerda"]
position = Vector2( 0, 160 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="Paredes/Esquerda"]
position = Vector2( 21, 160 )
rotation = 1.5708
scale = Vector2( 0.818, 1 )
texture = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="Paredes/Esquerda"]
position = Vector2( 21, 160 )
scale = Vector2( 0.0106178, 0.947368 )
texture = ExtResource( 7 )
energy = 0.6

[node name="Direita" type="StaticBody2D" parent="Paredes" groups=[
"Parede",
]]
position = Vector2( 1440, 416 )
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paredes/Direita"]
position = Vector2( 0, 160 )
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="Paredes/Direita"]
material = SubResource( 9 )
position = Vector2( -22, 160 )
rotation = 1.5708
scale = Vector2( 0.818, 1 )
texture = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="Paredes/Direita"]
position = Vector2( -21.5, 160 )
scale = Vector2( 0.0111004, 0.947368 )
texture = ExtResource( 7 )
energy = 0.6

[node name="Cogumelos" type="Node2D" parent="."]

[node name="Cabecas" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="KinematicBody2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 704, 1120 )
collision_layer = 2

[node name="Spawns" type="Node2D" parent="."]

[node name="Topo" type="Node2D" parent="Spawns"]

[node name="Position2D1" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 32, -96 )

[node name="Position2D2" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 96, -96 )

[node name="Position2D3" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 160, -96 )

[node name="Position2D4" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 224, -96 )

[node name="Position2D5" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 288, -96 )

[node name="Position2D6" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 352, -96 )

[node name="Position2D7" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 416, -96 )

[node name="Position2D8" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 480, -96 )

[node name="Position2D9" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 544, -96 )

[node name="Position2D10" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 608, -96 )

[node name="Position2D11" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 672, -96 )

[node name="Position2D12" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 736, -96 )

[node name="Position2D13" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 800, -96 )

[node name="Position2D14" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 864, -96 )

[node name="Position2D15" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 928, -96 )

[node name="Position2D16" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 992, -96 )

[node name="Position2D17" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 1056, -96 )

[node name="Position2D18" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 1120, -96 )

[node name="Position2D19" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 1184, -96 )

[node name="Position2D20" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 1248, -96 )

[node name="Position2D21" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 1312, -96 )

[node name="Position2D22" type="Position2D" parent="Spawns/Topo"]
position = Vector2( 1376, -96 )

[node name="EsquerdaTopo" type="Node2D" parent="Spawns"]

[node name="Position2D1" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 32 )

[node name="Position2D2" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 96 )

[node name="Position2D3" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 160 )

[node name="Position2D4" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 224 )

[node name="Position2D5" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 288 )

[node name="Position2D6" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 352 )

[node name="Position2D7" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 416 )

[node name="Position2D8" type="Position2D" parent="Spawns/EsquerdaTopo"]
position = Vector2( -96, 480 )

[node name="EsquerdaBaixo" type="Node2D" parent="Spawns"]

[node name="Position2D13" type="Position2D" parent="Spawns/EsquerdaBaixo"]
position = Vector2( -96, 864 )

[node name="Position2D12" type="Position2D" parent="Spawns/EsquerdaBaixo"]
position = Vector2( -96, 928 )

[node name="Position2D11" type="Position2D" parent="Spawns/EsquerdaBaixo"]
position = Vector2( -96, 992 )

[node name="Position2D10" type="Position2D" parent="Spawns/EsquerdaBaixo"]
position = Vector2( -96, 1056 )

[node name="Position2D9" type="Position2D" parent="Spawns/EsquerdaBaixo"]
position = Vector2( -96, 1120 )

[node name="DireitaTopo" type="Node2D" parent="Spawns"]
position = Vector2( 1600, 0 )

[node name="Position2D1" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 32 )

[node name="Position2D2" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 96 )

[node name="Position2D3" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 160 )

[node name="Position2D4" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 224 )

[node name="Position2D5" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 288 )

[node name="Position2D6" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 352 )

[node name="Position2D7" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 416 )

[node name="Position2D8" type="Position2D" parent="Spawns/DireitaTopo"]
position = Vector2( -96, 480 )

[node name="DireitaBaixo" type="Node2D" parent="Spawns"]
position = Vector2( 1504, 864 )

[node name="Position2D13" type="Position2D" parent="Spawns/DireitaBaixo"]

[node name="Position2D12" type="Position2D" parent="Spawns/DireitaBaixo"]
position = Vector2( 0, 64 )

[node name="Position2D11" type="Position2D" parent="Spawns/DireitaBaixo"]
position = Vector2( 0, 128 )

[node name="Position2D10" type="Position2D" parent="Spawns/DireitaBaixo"]
position = Vector2( 0, 192 )

[node name="Position2D9" type="Position2D" parent="Spawns/DireitaBaixo"]
position = Vector2( 0, 256 )

[node name="Inimigos" type="Node2D" parent="."]
position = Vector2( -32, -32 )

[node name="Node" type="Node" parent="."]

[node name="TimerAranha" type="Timer" parent="Node"]
wait_time = 3.0
one_shot = true

[node name="TimerConcha" type="Timer" parent="Node"]
wait_time = 3.0
one_shot = true

[node name="TimerCobra" type="Timer" parent="Node"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="Control" type="Control" parent="."]
margin_left = 1536.0
margin_top = -32.0
margin_right = 2016.0
margin_bottom = 1184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMapHUD" type="TileMap" parent="Control"]
position = Vector2( -1536, 32 )
tile_set = SubResource( 11 )
cell_quadrant_size = 1
format = 1
tile_data = PoolIntArray( -65513, 0, 0, -65512, 0, 0, -65511, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 393245, 0, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 458781, 0, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0 )

[node name="Label" type="Label" parent="Control"]
light_mask = 2
material = SubResource( 12 )
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -76.0
margin_right = 3.05176e-05
margin_bottom = 52.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Pontuação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D2" type="Light2D" parent="Control"]
position = Vector2( 213.063, 583.338 )
scale = Vector2( 0.253816, 0.10333 )
texture = ExtResource( 7 )
energy = 0.8
range_item_cull_mask = 2

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 730, 576 )
scale = Vector2( 0.747104, 1 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
material = ExtResource( 8 )
margin_left = -32.0
margin_top = -32.0
margin_right = 1440.0
margin_bottom = 1184.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Node/TimerAranha" to="." method="_on_TimerAranha_timeout"]
[connection signal="timeout" from="Node/TimerConcha" to="." method="_on_TimerConcha_timeout"]
